--- a/User-Service/src/main/resources/application.yml
+++ b/User-Service/src/main/resources/application.yml
@@ -2,7 +2,11 @@ server:
   port: 8081
   servlet:
     context-path: /api/v1/user
-  
+
+eureka:
+  client:
+    fetch-registry: false
+
 spring:
   application:
     name: user-ms-service
