--- a/notes-service/src/main/resources/application.yml
+++ b/notes-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /api/v1/notes
 spring:
   application:
-    name: notes-service  
+    name: notes-ms-service  
   data:
    mongodb:
      uri: mongodb+srv://Swamy:swamy123@cluster0.s6fkj.mongodb.net/?retryWrites=true&w=majority
